--- a/tipkor/stamp/templates/stamp/success.html
+++ b/tipkor/stamp/templates/stamp/success.html
@@ -13,34 +13,35 @@
 
 
 <div class="container">
-    <div class="confirm_order border shadow p-3">
+    <div class="confirm_order border shadow rounded p-3">
         <div class="row">
 
             <h2 id="a_success">Заказ №{{ order.id }} размещен от {{ order.create_date }}</h2>
             <div>
                 <div class="col">
                     {% if order.product.cost %}
-                        <h4>Стоимость: {{ order.product.cost }} руб.</h4>
+                    <h4>Стоимость: {{ order.product.cost }} руб.</h4>
                     {% else %}
-                        <h4>Стоимость будет указана в согласовании заказа.</h4><br>
+                    <h4>Стоимость будет указана в согласовании заказа.</h4><br>
                     {% endif %}
 
                     <h5>Продукция: {{ order.product.type_production }}</h5>
 
                     {% if order.product.express == True %}
-                        {% if order.product.type_production == 'Печать' %}
-                            <h5 style="color: red;">Срочное изготовление</h5>
-                        {% else %}
-                            <h5 style="color: red;">Срочное изготовление (+ 500 руб.)</h5>
-                        {% endif %}
+                    {% if order.product.type_production == 'Печать' %}
+                    <h5 style="color: red;">Срочное изготовление</h5>
+                    {% else %}
+                    <h5 style="color: red;">Срочное изготовление (+ 500 руб.)</h5>
                     {% endif %}
-                    
+                    {% endif %}
+
                     <h5>Оснастка: {{ order.product.snap }}</h5>
                     <h5>Количество: {{ order.product.count }} штук.</h5>
                 </div>
 
                 <div class="col">
-                    <h3 style="color: rgb(1, 58, 124);">Готовность: {{ order.ready_date.time }}, {{ order.ready_date.date }}</h3>
+                    <h3 style="color: rgb(1, 58, 124);">Готовность: {{ order.ready_date.time }}, {{
+                        order.ready_date.date }}</h3>
                 </div>
 
                 <div class="col">
@@ -48,14 +49,8 @@
                 </div>
             </div>
         </div>
-
+        <a href="/" type="button">На главную</a>
     </div>
-
-    <a href="/" type="button">На главную</a>
-
-
-
-
 </div>
 
 <br><br>
