--- a/tipkor/stamp/templates/stamp/c_stamp.html
+++ b/tipkor/stamp/templates/stamp/c_stamp.html
@@ -50,7 +50,6 @@
                             <h5>Цена: 400 руб.</h5>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -62,10 +61,9 @@
 
         <h1 id="after_calc" class="title_text pt-3">Изготовление печатей</h1>
 
-        <div class="calc_form border shadow rounded p-3 mt-4 ">
+        <div class="calc_form border shadow rounded p-3 mt-4">
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-10 col-sm-12 ">
-
                     <form class="form-control-lg " action="{% url 'stamp:c_stamp' %}#after_calc" method="post">
                         {% csrf_token %}
                         <div class="row">
@@ -89,7 +87,6 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
                 <!-- Картника калькулятора -->
                 <div class="calc_img col ">
@@ -102,7 +99,7 @@
 
     <br><br>
     <div class="container">
-        <div class="result_info p-3 shadow">
+        <div class="result_info p-3 shadow border rounded">
             <div class="row py-3 mx-1 border border-bg-secondary border-2 rounded bg-light">
                 <!-- Результаты расчета -->
                 <div class="col">
